--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "firebase": "^11.5.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image": "^4.1.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fountain": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/file-saver": "^2.0.7",
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
