--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.15",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "firebase": "^11.5.0",
+    "framer-motion": "^12.6.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image": "^4.1.0",
     "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.0.15",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fountain": "^2.12.0",
