--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "framer-motion": "^12.6.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
-    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image": "^4.1.0",
     "react-tsparticles": "^2.12.2",
-    "tailwindcss": "^4.0.16",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-preset-fountain": "^2.12.0",
@@ -38,11 +36,14 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
     "sass-embedded": "^1.86.0",
+    "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
