--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1",
