--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.5.0",
     "framer-motion": "^12.6.0",
+    "iconsax-react": "^0.0.8",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
