--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
