--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "dayjs": "^1.11.13",
     "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
