--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
     "dayjs": "^1.11.13",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/downloadjs": "^1.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/jspdf": "^2.0.0",
