--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
@@ -20,9 +21,11 @@
     "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
     "firebase": "^11.5.0",
+    "fontkit": "^2.0.4",
     "framer-motion": "^12.6.0",
     "html-to-image": "^1.11.13",
     "iconsax-react": "^0.0.8",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
